src PLY/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> level
Rule 2     level -> maze entry exit rooms paths obstacles
Rule 3     maze -> MAZE LLAVE_IZQ dimensions LLAVE_DER PUNTO_COMA
Rule 4     dimensions -> DIMENSIONS NUMBER X NUMBER
Rule 5     entry -> ENTRY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 6     exit -> EXIT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 7     rooms -> ROOMS LLAVE_IZQ roomList LLAVE_DER
Rule 8     roomList -> room roomList
Rule 9     roomList -> <empty>
Rule 10    room -> ROOM FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER dimensions PUNTO_COMA
Rule 11    paths -> PATHS LLAVE_IZQ pathList LLAVE_DER
Rule 12    pathList -> path pathList
Rule 13    pathList -> <empty>
Rule 14    path -> PATH FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 15    path -> PATH LLAVE_IZQ pointList LLAVE_DER
Rule 16    pointList -> point pointList
Rule 17    pointList -> <empty>
Rule 18    point -> POINT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 19    obstacles -> OBSTACLES LLAVE_IZQ obstacleList LLAVE_DER
Rule 20    obstacleList -> obstacle obstacleList
Rule 21    obstacleList -> <empty>
Rule 22    obstacle -> bomb
Rule 23    obstacle -> enemy
Rule 24    obstacle -> door
Rule 25    obstacle -> key
Rule 26    obstacle -> coin
Rule 27    obstacle -> trap
Rule 28    bomb -> BOMB PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 29    enemy -> ENEMY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA
Rule 30    enemy_type -> ARCHER
Rule 31    enemy_type -> WARRIOR
Rule 32    enemy_type -> MAGE
Rule 33    door -> DOOR PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 34    key -> KEY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 35    coin -> COIN PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 36    trap -> TRAP PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

Terminals, with rules where they appear

ARCHER               : 30
BOMB                 : 28
COIN                 : 35
COMA                 : 5 6 10 14 14 18 28 29 33 34 35 36 36
DIMENSIONS           : 4
DOOR                 : 33
ENEMY                : 29
ENTRY                : 5
EXIT                 : 6
FROM                 : 10 14
KEY                  : 34
LLAVE_DER            : 3 7 11 15 19
LLAVE_IZQ            : 3 7 11 15 19
MAGE                 : 32
MAZE                 : 3
NUMBER               : 4 4 5 5 6 6 10 10 14 14 14 14 18 18 28 28 29 29 33 33 34 34 35 35 36 36 36 36
OBSTACLES            : 19
PAREN_DER            : 5 6 10 14 14 18 28 29 33 34 35 36 36
PAREN_IZQ            : 5 6 10 14 14 18 28 29 33 34 35 36 36
PATH                 : 14 15
PATHS                : 11
POINT                : 18
PUNTO_COMA           : 3 5 6 10 14 18 28 29 33 34 35 36
ROOM                 : 10
ROOMS                : 7
TO                   : 14 36
TRAP                 : 36
TYPE                 : 29
WARRIOR              : 31
X                    : 4
error                : 

Nonterminals, with rules where they appear

bomb                 : 22
coin                 : 26
dimensions           : 3 10
door                 : 24
enemy                : 23
enemy_type           : 29
entry                : 2
exit                 : 2
key                  : 25
level                : 1
maze                 : 2
obstacle             : 20
obstacleList         : 19 20
obstacles            : 2
path                 : 12
pathList             : 11 12
paths                : 2
point                : 16
pointList            : 15 16
program              : 0
room                 : 8
roomList             : 7 8
rooms                : 2
trap                 : 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . level
    (2) level -> . maze entry exit rooms paths obstacles
    (3) maze -> . MAZE LLAVE_IZQ dimensions LLAVE_DER PUNTO_COMA

    MAZE            shift and go to state 4

    program                        shift and go to state 1
    level                          shift and go to state 2
    maze                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> level .

    $end            reduce using rule 1 (program -> level .)


state 3

    (2) level -> maze . entry exit rooms paths obstacles
    (5) entry -> . ENTRY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    ENTRY           shift and go to state 6

    entry                          shift and go to state 5

state 4

    (3) maze -> MAZE . LLAVE_IZQ dimensions LLAVE_DER PUNTO_COMA

    LLAVE_IZQ       shift and go to state 7


state 5

    (2) level -> maze entry . exit rooms paths obstacles
    (6) exit -> . EXIT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    EXIT            shift and go to state 9

    exit                           shift and go to state 8

state 6

    (5) entry -> ENTRY . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 10


state 7

    (3) maze -> MAZE LLAVE_IZQ . dimensions LLAVE_DER PUNTO_COMA
    (4) dimensions -> . DIMENSIONS NUMBER X NUMBER

    DIMENSIONS      shift and go to state 12

    dimensions                     shift and go to state 11

state 8

    (2) level -> maze entry exit . rooms paths obstacles
    (7) rooms -> . ROOMS LLAVE_IZQ roomList LLAVE_DER

    ROOMS           shift and go to state 14

    rooms                          shift and go to state 13

state 9

    (6) exit -> EXIT . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 15


state 10

    (5) entry -> ENTRY PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 16


state 11

    (3) maze -> MAZE LLAVE_IZQ dimensions . LLAVE_DER PUNTO_COMA

    LLAVE_DER       shift and go to state 17


state 12

    (4) dimensions -> DIMENSIONS . NUMBER X NUMBER

    NUMBER          shift and go to state 18


state 13

    (2) level -> maze entry exit rooms . paths obstacles
    (11) paths -> . PATHS LLAVE_IZQ pathList LLAVE_DER

    PATHS           shift and go to state 20

    paths                          shift and go to state 19

state 14

    (7) rooms -> ROOMS . LLAVE_IZQ roomList LLAVE_DER

    LLAVE_IZQ       shift and go to state 21


state 15

    (6) exit -> EXIT PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 22


state 16

    (5) entry -> ENTRY PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER PUNTO_COMA

    COMA            shift and go to state 23


state 17

    (3) maze -> MAZE LLAVE_IZQ dimensions LLAVE_DER . PUNTO_COMA

    PUNTO_COMA      shift and go to state 24


state 18

    (4) dimensions -> DIMENSIONS NUMBER . X NUMBER

    X               shift and go to state 25


state 19

    (2) level -> maze entry exit rooms paths . obstacles
    (19) obstacles -> . OBSTACLES LLAVE_IZQ obstacleList LLAVE_DER

    OBSTACLES       shift and go to state 27

    obstacles                      shift and go to state 26

state 20

    (11) paths -> PATHS . LLAVE_IZQ pathList LLAVE_DER

    LLAVE_IZQ       shift and go to state 28


state 21

    (7) rooms -> ROOMS LLAVE_IZQ . roomList LLAVE_DER
    (8) roomList -> . room roomList
    (9) roomList -> .
    (10) room -> . ROOM FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER dimensions PUNTO_COMA

    LLAVE_DER       reduce using rule 9 (roomList -> .)
    ROOM            shift and go to state 31

    roomList                       shift and go to state 29
    room                           shift and go to state 30

state 22

    (6) exit -> EXIT PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER PUNTO_COMA

    COMA            shift and go to state 32


state 23

    (5) entry -> ENTRY PAREN_IZQ NUMBER COMA . NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 33


state 24

    (3) maze -> MAZE LLAVE_IZQ dimensions LLAVE_DER PUNTO_COMA .

    ENTRY           reduce using rule 3 (maze -> MAZE LLAVE_IZQ dimensions LLAVE_DER PUNTO_COMA .)


state 25

    (4) dimensions -> DIMENSIONS NUMBER X . NUMBER

    NUMBER          shift and go to state 34


state 26

    (2) level -> maze entry exit rooms paths obstacles .

    $end            reduce using rule 2 (level -> maze entry exit rooms paths obstacles .)


state 27

    (19) obstacles -> OBSTACLES . LLAVE_IZQ obstacleList LLAVE_DER

    LLAVE_IZQ       shift and go to state 35


state 28

    (11) paths -> PATHS LLAVE_IZQ . pathList LLAVE_DER
    (12) pathList -> . path pathList
    (13) pathList -> .
    (14) path -> . PATH FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (15) path -> . PATH LLAVE_IZQ pointList LLAVE_DER

    LLAVE_DER       reduce using rule 13 (pathList -> .)
    PATH            shift and go to state 38

    pathList                       shift and go to state 36
    path                           shift and go to state 37

state 29

    (7) rooms -> ROOMS LLAVE_IZQ roomList . LLAVE_DER

    LLAVE_DER       shift and go to state 39


state 30

    (8) roomList -> room . roomList
    (8) roomList -> . room roomList
    (9) roomList -> .
    (10) room -> . ROOM FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER dimensions PUNTO_COMA

    LLAVE_DER       reduce using rule 9 (roomList -> .)
    ROOM            shift and go to state 31

    room                           shift and go to state 30
    roomList                       shift and go to state 40

state 31

    (10) room -> ROOM . FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER dimensions PUNTO_COMA

    FROM            shift and go to state 41


state 32

    (6) exit -> EXIT PAREN_IZQ NUMBER COMA . NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 42


state 33

    (5) entry -> ENTRY PAREN_IZQ NUMBER COMA NUMBER . PAREN_DER PUNTO_COMA

    PAREN_DER       shift and go to state 43


state 34

    (4) dimensions -> DIMENSIONS NUMBER X NUMBER .

    LLAVE_DER       reduce using rule 4 (dimensions -> DIMENSIONS NUMBER X NUMBER .)
    PUNTO_COMA      reduce using rule 4 (dimensions -> DIMENSIONS NUMBER X NUMBER .)


state 35

    (19) obstacles -> OBSTACLES LLAVE_IZQ . obstacleList LLAVE_DER
    (20) obstacleList -> . obstacle obstacleList
    (21) obstacleList -> .
    (22) obstacle -> . bomb
    (23) obstacle -> . enemy
    (24) obstacle -> . door
    (25) obstacle -> . key
    (26) obstacle -> . coin
    (27) obstacle -> . trap
    (28) bomb -> . BOMB PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (29) enemy -> . ENEMY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA
    (33) door -> . DOOR PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (34) key -> . KEY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (35) coin -> . COIN PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (36) trap -> . TRAP PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    LLAVE_DER       reduce using rule 21 (obstacleList -> .)
    BOMB            shift and go to state 52
    ENEMY           shift and go to state 53
    DOOR            shift and go to state 54
    KEY             shift and go to state 55
    COIN            shift and go to state 56
    TRAP            shift and go to state 57

    obstacleList                   shift and go to state 44
    obstacle                       shift and go to state 45
    bomb                           shift and go to state 46
    enemy                          shift and go to state 47
    door                           shift and go to state 48
    key                            shift and go to state 49
    coin                           shift and go to state 50
    trap                           shift and go to state 51

state 36

    (11) paths -> PATHS LLAVE_IZQ pathList . LLAVE_DER

    LLAVE_DER       shift and go to state 58


state 37

    (12) pathList -> path . pathList
    (12) pathList -> . path pathList
    (13) pathList -> .
    (14) path -> . PATH FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (15) path -> . PATH LLAVE_IZQ pointList LLAVE_DER

    LLAVE_DER       reduce using rule 13 (pathList -> .)
    PATH            shift and go to state 38

    path                           shift and go to state 37
    pathList                       shift and go to state 59

state 38

    (14) path -> PATH . FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (15) path -> PATH . LLAVE_IZQ pointList LLAVE_DER

    FROM            shift and go to state 60
    LLAVE_IZQ       shift and go to state 61


state 39

    (7) rooms -> ROOMS LLAVE_IZQ roomList LLAVE_DER .

    PATHS           reduce using rule 7 (rooms -> ROOMS LLAVE_IZQ roomList LLAVE_DER .)


state 40

    (8) roomList -> room roomList .

    LLAVE_DER       reduce using rule 8 (roomList -> room roomList .)


state 41

    (10) room -> ROOM FROM . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER dimensions PUNTO_COMA

    PAREN_IZQ       shift and go to state 62


state 42

    (6) exit -> EXIT PAREN_IZQ NUMBER COMA NUMBER . PAREN_DER PUNTO_COMA

    PAREN_DER       shift and go to state 63


state 43

    (5) entry -> ENTRY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER . PUNTO_COMA

    PUNTO_COMA      shift and go to state 64


state 44

    (19) obstacles -> OBSTACLES LLAVE_IZQ obstacleList . LLAVE_DER

    LLAVE_DER       shift and go to state 65


state 45

    (20) obstacleList -> obstacle . obstacleList
    (20) obstacleList -> . obstacle obstacleList
    (21) obstacleList -> .
    (22) obstacle -> . bomb
    (23) obstacle -> . enemy
    (24) obstacle -> . door
    (25) obstacle -> . key
    (26) obstacle -> . coin
    (27) obstacle -> . trap
    (28) bomb -> . BOMB PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (29) enemy -> . ENEMY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA
    (33) door -> . DOOR PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (34) key -> . KEY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (35) coin -> . COIN PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (36) trap -> . TRAP PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    LLAVE_DER       reduce using rule 21 (obstacleList -> .)
    BOMB            shift and go to state 52
    ENEMY           shift and go to state 53
    DOOR            shift and go to state 54
    KEY             shift and go to state 55
    COIN            shift and go to state 56
    TRAP            shift and go to state 57

    obstacle                       shift and go to state 45
    obstacleList                   shift and go to state 66
    bomb                           shift and go to state 46
    enemy                          shift and go to state 47
    door                           shift and go to state 48
    key                            shift and go to state 49
    coin                           shift and go to state 50
    trap                           shift and go to state 51

state 46

    (22) obstacle -> bomb .

    BOMB            reduce using rule 22 (obstacle -> bomb .)
    ENEMY           reduce using rule 22 (obstacle -> bomb .)
    DOOR            reduce using rule 22 (obstacle -> bomb .)
    KEY             reduce using rule 22 (obstacle -> bomb .)
    COIN            reduce using rule 22 (obstacle -> bomb .)
    TRAP            reduce using rule 22 (obstacle -> bomb .)
    LLAVE_DER       reduce using rule 22 (obstacle -> bomb .)


state 47

    (23) obstacle -> enemy .

    BOMB            reduce using rule 23 (obstacle -> enemy .)
    ENEMY           reduce using rule 23 (obstacle -> enemy .)
    DOOR            reduce using rule 23 (obstacle -> enemy .)
    KEY             reduce using rule 23 (obstacle -> enemy .)
    COIN            reduce using rule 23 (obstacle -> enemy .)
    TRAP            reduce using rule 23 (obstacle -> enemy .)
    LLAVE_DER       reduce using rule 23 (obstacle -> enemy .)


state 48

    (24) obstacle -> door .

    BOMB            reduce using rule 24 (obstacle -> door .)
    ENEMY           reduce using rule 24 (obstacle -> door .)
    DOOR            reduce using rule 24 (obstacle -> door .)
    KEY             reduce using rule 24 (obstacle -> door .)
    COIN            reduce using rule 24 (obstacle -> door .)
    TRAP            reduce using rule 24 (obstacle -> door .)
    LLAVE_DER       reduce using rule 24 (obstacle -> door .)


state 49

    (25) obstacle -> key .

    BOMB            reduce using rule 25 (obstacle -> key .)
    ENEMY           reduce using rule 25 (obstacle -> key .)
    DOOR            reduce using rule 25 (obstacle -> key .)
    KEY             reduce using rule 25 (obstacle -> key .)
    COIN            reduce using rule 25 (obstacle -> key .)
    TRAP            reduce using rule 25 (obstacle -> key .)
    LLAVE_DER       reduce using rule 25 (obstacle -> key .)


state 50

    (26) obstacle -> coin .

    BOMB            reduce using rule 26 (obstacle -> coin .)
    ENEMY           reduce using rule 26 (obstacle -> coin .)
    DOOR            reduce using rule 26 (obstacle -> coin .)
    KEY             reduce using rule 26 (obstacle -> coin .)
    COIN            reduce using rule 26 (obstacle -> coin .)
    TRAP            reduce using rule 26 (obstacle -> coin .)
    LLAVE_DER       reduce using rule 26 (obstacle -> coin .)


state 51

    (27) obstacle -> trap .

    BOMB            reduce using rule 27 (obstacle -> trap .)
    ENEMY           reduce using rule 27 (obstacle -> trap .)
    DOOR            reduce using rule 27 (obstacle -> trap .)
    KEY             reduce using rule 27 (obstacle -> trap .)
    COIN            reduce using rule 27 (obstacle -> trap .)
    TRAP            reduce using rule 27 (obstacle -> trap .)
    LLAVE_DER       reduce using rule 27 (obstacle -> trap .)


state 52

    (28) bomb -> BOMB . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 67


state 53

    (29) enemy -> ENEMY . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA

    PAREN_IZQ       shift and go to state 68


state 54

    (33) door -> DOOR . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 69


state 55

    (34) key -> KEY . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 70


state 56

    (35) coin -> COIN . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 71


state 57

    (36) trap -> TRAP . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 72


state 58

    (11) paths -> PATHS LLAVE_IZQ pathList LLAVE_DER .

    OBSTACLES       reduce using rule 11 (paths -> PATHS LLAVE_IZQ pathList LLAVE_DER .)


state 59

    (12) pathList -> path pathList .

    LLAVE_DER       reduce using rule 12 (pathList -> path pathList .)


state 60

    (14) path -> PATH FROM . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 73


state 61

    (15) path -> PATH LLAVE_IZQ . pointList LLAVE_DER
    (16) pointList -> . point pointList
    (17) pointList -> .
    (18) point -> . POINT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    LLAVE_DER       reduce using rule 17 (pointList -> .)
    POINT           shift and go to state 76

    pointList                      shift and go to state 74
    point                          shift and go to state 75

state 62

    (10) room -> ROOM FROM PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER dimensions PUNTO_COMA

    NUMBER          shift and go to state 77


state 63

    (6) exit -> EXIT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER . PUNTO_COMA

    PUNTO_COMA      shift and go to state 78


state 64

    (5) entry -> ENTRY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA .

    EXIT            reduce using rule 5 (entry -> ENTRY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA .)


state 65

    (19) obstacles -> OBSTACLES LLAVE_IZQ obstacleList LLAVE_DER .

    $end            reduce using rule 19 (obstacles -> OBSTACLES LLAVE_IZQ obstacleList LLAVE_DER .)


state 66

    (20) obstacleList -> obstacle obstacleList .

    LLAVE_DER       reduce using rule 20 (obstacleList -> obstacle obstacleList .)


state 67

    (28) bomb -> BOMB PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 79


state 68

    (29) enemy -> ENEMY PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA

    NUMBER          shift and go to state 80


state 69

    (33) door -> DOOR PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 81


state 70

    (34) key -> KEY PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 82


state 71

    (35) coin -> COIN PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 83


state 72

    (36) trap -> TRAP PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 84


state 73

    (14) path -> PATH FROM PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 85


state 74

    (15) path -> PATH LLAVE_IZQ pointList . LLAVE_DER

    LLAVE_DER       shift and go to state 86


state 75

    (16) pointList -> point . pointList
    (16) pointList -> . point pointList
    (17) pointList -> .
    (18) point -> . POINT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    LLAVE_DER       reduce using rule 17 (pointList -> .)
    POINT           shift and go to state 76
